<resources>
    <string name="app_name">ApiDemoApp</string>
    <string name="facebook_app_id">2158621874221216</string>
    <string name="fb_login_protocol_scheme">fb2158621874221216</string>
    <string name="email_id">Email Id</string>
    <string name="otp">OTP</string>
    <string name="login">Login</string>
    <string name="continue1">Continue</string>
    <string name="login_with">Login With</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string-array name="month">
        <item>January</item>
        <item>february</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="year">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string name="education">Education</string>
    <string name="professional">Professional</string>
    <string name="achievement">Achievement</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="add_skill">Add Skill</string>
    <string name="professional_details">Professional Details</string>
    <string name="organization">Organization</string>
    <string name="currently_work_here">Currently work here</string>
    <string name="designation">Designation</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="education_details">Education Details</string>
    <string name="university">University</string>
    <string name="stream">Stream</string>
    <string name="city">City</string>
    <string name="add_your_certificate">Add your certificate</string>
    <string name="mobile">Mobile</string>
    <string name="location">Location</string>
    <string name="links">Links</string>
    <string name="enter_skills">Enter skills</string>
    <string name="add_certificate">Add Certificate</string>
</resources>
