<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SignUp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_logo"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/ETemailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@android:color/black"
        android:minHeight="50dp"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/email_id"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/ETpw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@android:color/black"
        android:minHeight="50dp"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/enter_password"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/ETpw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@android:color/black"
        android:minHeight="50dp"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/enter_password_again"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/BTNsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="70dp"
        android:background="#139ED1"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

</LinearLayout>