<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LoginStart"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_logo"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/BTNlogin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="#139ED1"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/BTNsignup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="#139ED1"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

</LinearLayout>