<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Login"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_logo"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:id="@+id/ETemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@android:color/black"
        android:minHeight="50dp"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/email_id"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/ETpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@android:color/black"
        android:minHeight="50dp"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/password"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/BTNlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        android:background="#139ED1"
        android:text="@string/continue1"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/login_with"
        android:textColor="#139ED1"
        android:textSize="25sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:weightSum="5">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/linkedin_circle"/>

        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/login_button"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="3"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:layout_marginBottom="30dp" />-->

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/twitter_circle"/>

    </LinearLayout>

</LinearLayout>