<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Home"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:background="@drawable/home_background"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/IVprofile"
            android:layout_width="130dp"
            android:layout_height="130dp"/>

        <TextView
            android:id="@+id/TVname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/TVinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/TVlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="2dp"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:src="@drawable/home_image"
            android:layout_marginTop="3dp"/>

        <TextView
            android:id="@+id/TVlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="3dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BTnedu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/education"
                android:textColor="@android:color/holo_blue_dark"
                android:background="@drawable/home_btnborder"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/BTnpro"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/professional"
                android:textColor="@android:color/holo_blue_dark"
                android:background="@drawable/home_btnborder"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/BTnach"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/achievement"
                android:textColor="@android:color/holo_blue_dark"
                android:background="@drawable/home_btnborder"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLedu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher_round"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/TVhomeuni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/TVhomestream"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/TVhomeyear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/IVhomecer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/IBeduedit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_create_black_24dp"
                    android:layout_gravity="center"/>

                <ImageButton
                    android:id="@+id/IBedudelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete_forever_black_24dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLpro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/TVhomedesg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/TVhomeorg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/TVhomeprostart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/TVhomeproend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>